Add pagination on the getOneChanMessage +  add getpublichan paginated with search capability
